--- a/main/index.html
+++ b/main/index.html
@@ -4,22 +4,39 @@
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="../libraries/bootstrap/css/bootstrap-grid.css">
+	<link rel="stylesheet" href="../libraries/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="style/css.css">
 	<title>Mapa do Ceará</title>
 </head>
 
 <body>
-	<h3 id="cidade"></h3>
-
-
 	<div class="container-fluid">
+		<h3 id="cidade"></h3>
 		<div class="row">
 
   		<div id="map" class="col-md-6"></div>
 
 				<div class="col-md-6">
-					<canvas id="chart" width="400" height="400"></canvas>
+	<!--
+					<div class="row">
+						<div class="form-check">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+									Linhas
+							</label>
+						</div>
+
+						<div class="form-check">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+								Barras
+							</label>
+						</div>
+					</div>
+-->
+					<div class="row">
+						<canvas id="chart" width="400" height="400"></canvas>
+					</div>
 				</div>
 
 		</div>
