Tentativa de comunicação com o servidor do TCM.

--- a/main/index.html
+++ b/main/index.html
@@ -16,7 +16,7 @@
 
   		<div id="map" class="col-md-6"></div>
 
-				<div class="col-md-6">
+				<div>
 	<!--
 					<div class="row">
 						<div class="form-check">
@@ -35,18 +35,11 @@
 					</div>
 -->
 					<div class="row">
-						<canvas id="chart" width="400" height="400"></canvas>
+						<canvas id="chart" width="650" height="200"></canvas>
 					</div>
 				</div>
-
 		</div>
 	</div>
-
-
-
-
-
-
 
 	<script src="../libraries/jquery/js/jquery-3.2.1.min.js"></script>
 	<script src="../libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
