--- a/main/index.html
+++ b/main/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div class="container-fluid">
-		<h3 id="cidade"></h3>
+		<h3 id="cidade">Nome do Município</h3>
 		<div class="row">
 
   		<div id="map" class="col-md-6"></div>
