--- a/main/index.html
+++ b/main/index.html
@@ -47,6 +47,7 @@
 	<script src="../libraries/map-svg-ceara/js/map.js"></script>
 	<script src="../libraries/chart/js/Chart.min.js"></script>
 	<script src="js/code.js"></script>
+	<script src="js/davi.js"></script>
 </body>
 
 </html>
