--- a/main/index.html
+++ b/main/index.html
@@ -49,6 +49,7 @@
 	<script src="js/code.js"></script>
 	<script src="js/igor.js"></script>
 	<script src="js/davi.js"></script>
+	<script src="js/grafico.js"></script>
 </body>
 
 </html>
