--- a/main/index.html
+++ b/main/index.html
@@ -46,9 +46,8 @@
 	<script src="../libraries/map-svg-ceara/js/raphael-min.js"></script>
 	<script src="../libraries/map-svg-ceara/js/map.js"></script>
 	<script src="../libraries/chart/js/Chart.min.js"></script>
-	<script src="js/code.js"></script>
-	<script src="js/igor.js"></script>
-	<script src="js/davi.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/metodos.js"></script>
 	<script src="js/grafico.js"></script>
 </body>
 
