--- a/main/index.html
+++ b/main/index.html
@@ -17,23 +17,20 @@
   		<div id="map" class="col-md-6"></div>
 
 				<div>
-	<!--
 					<div class="row">
-						<div class="form-check">
-							<label class="form-check-label">
-								<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-									Linhas
-							</label>
-						</div>
-
-						<div class="form-check">
-							<label class="form-check-label">
-								<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-								Barras
-							</label>
-						</div>
+                        <div class="form-group col-4">
+                            <label>Selecione o ano</label>
+                            <select class="form-control">
+                                <option value="2011">2011</option>
+                                <option value="2012">2012</option>
+                                <option value="2013">2013</option>
+                                <option value="2014">2014</option>
+                                <option value="2015">2015</option>
+                                <option value="2016">2016</option>
+                                <option value="2017">2017</option>
+                            </select>
+                        </div>
 					</div>
--->
 					<div class="row">
 						<canvas id="chart" width="650" height="200"></canvas>
 					</div>
