--- a/main/index.html
+++ b/main/index.html
@@ -20,7 +20,7 @@
 					<div class="row">
                         <div class="form-group col-4">
                             <label>Selecione o ano</label>
-                            <select class="form-control">
+                            <select class="form-control" id="ano">
                                 <option value="2011">2011</option>
                                 <option value="2012">2012</option>
                                 <option value="2013">2013</option>
@@ -43,9 +43,10 @@
 	<script src="../libraries/map-svg-ceara/js/raphael-min.js"></script>
 	<script src="../libraries/map-svg-ceara/js/map.js"></script>
 	<script src="../libraries/chart/js/Chart.min.js"></script>
-	<script src="js/main.js"></script>
+	
 	<script src="js/metodos.js"></script>
 	<script src="js/grafico.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
