--- a/main/index.html
+++ b/main/index.html
@@ -13,10 +13,8 @@
 	<div class="container-fluid">
 		<h3 id="cidade">Nome do Município</h3>
 		<div class="row">
-
-  		<div id="map" class="col-md-6"></div>
-
-				<div>
+  		    <div id="map" class="col-6"></div>
+				<div class="col-6">
 					<div class="row">
                         <div class="form-group col-4">
                             <label>Selecione o ano</label>
@@ -27,14 +25,16 @@
                                 <option value="2014">2014</option>
                                 <option value="2015">2015</option>
                                 <option value="2016">2016</option>
-                                <option value="2017">2017</option>
+                                <option selected value="2017">2017</option>
                             </select>
                         </div>
 					</div>
-					<div class="row">
-						<canvas id="chart" width="650" height="200"></canvas>
-					</div>
-				</div>
+
+                    <div class="row">
+						    <canvas id="chart" width="600" height="400"></canvas>
+                    </div>
+                </div>
+        </div>
 		</div>
 	</div>
 
