--- a/main/index.html
+++ b/main/index.html
@@ -3,11 +3,39 @@
 
 <head>
 	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="../libraries/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="style/css.css">
+    <script defer src="../libraries/font-awesome/js/fontawesome-all.js"></script>
 	<title>Mapa do Ceará</title>
 </head>
+
+
+<!-- Modal -->
+<div class="modal fade" id="ajudaModal" tabindex="-1" role="dialog"  aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Ajuda</h2>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Ao selecionar a opção gráfico de Pizza, você poderá selecionar o ano e um município, ao fazer isso
+                você estará buscando a quantidade de dinheiro que foi investida em algumas áreas pre definidas como:
+                Educação, Legislativa, Cultura.
+                <br></br>
+
+                Com a opção gráfico de Linhas, você escolherá uma área por exemplo: Cultura, Saúde e após isso
+                selecionará um município, o gráfico mostrará a quantidade de dinheiro que foi investida entre os
+                anos de 2011 e 2017 na área que foi selecionada.
+
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <body>
 	<div class="container-fluid">
@@ -15,24 +43,86 @@
 		<div class="row">
   		    <div id="map" class="col-6"></div>
 				<div class="col-6">
-					<div class="row">
+
+                   <h2>
+                       <i class="fas fa-question-circle" id="ajuda" data-toggle="modal" data-target="#ajudaModal"></i>
+                        Selecione o tipo de gráfico que deseja:
+                   </h2>
+
+                        <div class="d-flex justify-content-center">
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="linha" value="linha" onchange="tipoGrafico()"> Linhas
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="pizza" value="pizza" onchange="tipoGrafico()"> Pizza
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="row d-none" id="caixaPizza">
+                            <div class="form-group col-4">
+                                <label>Selecione o ano</label>
+                                <select class="form-control" id="ano">
+                                    <option value="2011">2011</option>
+                                    <option value="2012">2012</option>
+                                    <option value="2013">2013</option>
+                                    <option value="2014">2014</option>
+                                    <option value="2015">2015</option>
+                                    <option value="2016">2016</option>
+                                    <option selected value="2017">2017</option>
+                                </select>
+                            </div>
+                        </div>
+
+                    <div class="row d-none" id="caixaLinha">
                         <div class="form-group col-4">
-                            <label>Selecione o ano</label>
-                            <select class="form-control" id="ano">
-                                <option value="2011">2011</option>
-                                <option value="2012">2012</option>
-                                <option value="2013">2013</option>
-                                <option value="2014">2014</option>
-                                <option value="2015">2015</option>
-                                <option value="2016">2016</option>
-                                <option selected value="2017">2017</option>
+                            <label>Selecione a área</label>
+                            <select class="form-control" id="area">
+                                <option selected value="Legislativa">Legislativa</option>
+                                <option value="Judiciária">Judiciária</option>
+                                <option value="Essencial à Justiça">Essencial à Justiça</option>
+                                <option value="Administração">Administração</option>
+                                <option value="Defesa Nacional">Defesa Nacional</option>
+                                <option value="Segurança Pública">Segurança Pública</option>
+                                <option value="	Relações Exteriores">Relações Exteriores</option>
+                                <option value="Assistência Social">Assistência Social</option>
+                                <option value="Previdência Social">Previdência Social</option>
+                                <option value="Saúde">Saúde</option>
+                                <option value="Trabalho">Trabalho</option>
+                                <option value="Educação">Educação</option>
+                                <option value="Cultura">Cultura</option>
+                                <option value="Direitos da Cidadania">Direitos da Cidadania</option>
+                                <option value="Urbanismo">Urbanismo</option>
+                                <option value="Habitação">Habitação</option>
+                                <option value="Saneamento">Saneamento</option>
+                                <option value="Gestão Ambiental">Gestão Ambiental</option>
+                                <option value="Ciência e Tecnologia">Ciência e Tecnologia</option>
+                                <option value="Agricultura">Agricultura</option>
+                                <option value="Organização Agrária">Organização Agrária</option>
+                                <option value="Indústria">Indústria</option>
+                                <option value="Comércio e Serviços">Comércio e Serviços</option>
+                                <option value="Comunicações">Comunicações</option>
+                                <option value="Energia">Energia</option>
+                                <option value="Transporte">Transporte</option>
+                                <option value="Desporto e Lazer">Desporto e Lazer</option>
+                                <option value="Encargos Especiais">Encargos Especiais</option>
+                                <option value="RESTOS A PAGAR">RESTOS A PAGAR</option>
+                                <option value="Reserva de Contingência">Reserva de Contingência</option>
+
                             </select>
                         </div>
-					</div>
-
-                    <div class="row">
-						    <canvas id="chart" width="600" height="400"></canvas>
                     </div>
+
+                        <div class="row">
+                            <canvas class="d-none" id="chartPizza" width="600" height="400"></canvas>
+                        </div>
+
+                        <div class="row">
+                            <canvas class="d-none" id="chartLinha" width="600" height="400"></canvas>
+                        </div>
                 </div>
         </div>
 		</div>
