--- a/main/index.html
+++ b/main/index.html
@@ -116,6 +116,9 @@
                         </div>
                     </div>
 
+                        <div class="row" style="display: none" id="carregando">
+                            <p>Carregando...</p>
+                        </div>
                         <div class="row">
                             <canvas class="d-none" id="chartPizza" width="600" height="400"></canvas>
                         </div>
@@ -123,6 +126,7 @@
                         <div class="row">
                             <canvas class="d-none" id="chartLinha" width="600" height="400"></canvas>
                         </div>
+                        
                 </div>
         </div>
 		</div>
