--- a/main/index.html
+++ b/main/index.html
@@ -115,9 +115,9 @@
                             </select>
                         </div>
                     </div>
-
                         <div class="row" style="display: none" id="carregando">
-                            <p>Carregando...</p>
+                            <i class="fas fa-spinner"></i>
+                            <p>Carregando...</p> 
                         </div>
                         <div class="row">
                             <canvas class="d-none" id="chartPizza" width="600" height="400"></canvas>
